--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <button class="btn-start">Start</button>
     </div>
 
+    <h2 class="no-indo"></h2>
+
     <script src="./main.js"></script>
 </body>
 </html>
